--- a/src/components/ContentCopyBlock/ContentCopyBlock.module.css
+++ b/src/components/ContentCopyBlock/ContentCopyBlock.module.css
@@ -87,6 +87,19 @@
   }
 }
 
+.staticMap {
+  width: 100%;
+  aspect-ratio: 360 / 202;
+  overflow: hidden;
+  border-radius: 10px;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+
 .ctaContainer {
   margin-top: 0;
 
